# ghosttunnel

./: .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SECURITY.md  build_binaries.sh  install.sh  pyproject.toml  scratch_fix.py  scratch_refactor.py
.agents/skills/: code_generator.md  qa_engineer.md  security_auditor.md
.github/workflows/: python-app.yml
assets/: ghosttunnel.desktop
docs/: KILLSWITCH_MAP.md  REFACTOR_LOG.md  SECURITY_AUDIT.md  SKILLS.md
etc/ghosttunnel/: panic.rules
scripts/: install_deps.sh
src/: ghost-recover.sh
src/ghosttunnel/: LICENSE  __init__.py  daemon.py
src/ghosttunnel/cli/: main.py
src/ghosttunnel/core/: anomaly.py  config.py  dns_protection.py  emergency.py  firewall.py  ipc.py  leak_detector.py  logger.py  models.py  system.py  vpn_monitor.py  vpn_rotator.py
src/ghosttunnel/gui/: leak_worker.py  main.py  network_map.py  traffic_worker.py
src/ghosttunnel/vpn/: __init__.py  custom.py  generic.py  openvpn.py  proton.py  wireguard.py
systemd/: ghosttunnel.service
tests/: __init__.py  test_security.py
