[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghosttunnel"
version = "1.0.0"
description = "Advanced Linux VPN Kill Switch & OPSEC Infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Resan" }
]
keywords = ["vpn", "killswitch", "nftables", "security", "opsec", "linux"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking :: Firewalls",
  "Topic :: Security",
]
dependencies = [
  "PyQt6>=6.0; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "flake8>=7.0",
  "bandit>=1.8",
]

[project.scripts]
ghostctl = "ghosttunnel.cli.main:main"
ghostd   = "ghosttunnel.daemon:main"
ghostgui = "ghosttunnel.gui.main:main"

[project.urls]
Homepage   = "https://github.com/ikerchborn/ghosttunnel"
Repository = "https://github.com/ikerchborn/ghosttunnel"
Issues     = "https://github.com/ikerchborn/ghosttunnel/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/ghosttunnel"]
